k8s/apps/test-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: default
  labels:
    app: test-app
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
      environment: dev
  template:
    metadata:
      labels:
        app: test-app
        environment: dev
    spec:
      serviceAccountName: test-app
      containers:
      - name: test-app
        image: nginxinc/nginx-unprivileged:alpine
        ports:
        - containerPort: 8080
        securityContext:
          runAsNonRoot: true
          runAsUser: 101
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
